# immoc_for_c

./: CMakeLists.txt  README.md  main.c
chapter10/: 01.basic_time.c  02.get_sys_time.c  03.calendar.c  04.format_time.c  05.parse_time.c  06.time_diff.c
chapter11/: 01.io_basics.c  02.set_buf.c  03.read_write_a_character.c  04.copy_file_1.c  05.read_write_a_line.c  06.copy_file_2.c
chapter12/: 01.thread_basics.c  02.thread_how_to.c  03.thread_safe.c  04.volatile.c  05.atomic_types.c  06.lock.c  07.thread_local.c  07.thread_local2.c  08.pure_function.c  09.compley_thread_result.c  10.callback.c
chapter13/: 02.static_library.c  03.shared_library.c  demo_2  demo_3  libmathutils.dylib
chapter3/: 01.data_types_int.c  02.data_types_char.c
chapter4/: 02.proto_type.c  03.variable_types_and_scope.c  04.varrags.c  05.recursion.c  06.hanoi.c
chapter5/: 01.file_include.c  02.my_include_file.c  03.macro_fuction.c  04.conditional_macro.c  05.printlnf.c
chapter6/: 01.array_basic.c  02.array_limits.c  03.string.c  04.function_array_parameter.c  05.2d_array.c  06.shuffle_array.c  07.quick_sort.c
chapter7/: 01.pointer_basic.c  02.readonly_pointer.c  03.pointer_values.c  04.pointer_operations.c  05.leftvalue_rvlaue.c  06.pointer_parameter_as_result_value.c  07.dynamic_memory.c  08.function_pointer.c  09.swap_values.c  10.quick_sort.c
chapter8/: 01.struct.c  02.memory_align.c  03.union.c  04.enum.c  05.judge_bytes_order.c  06.linked_list.c
chapter9/: 01.character_type.c  02.convert.c  03.string_length_compare.c  04.find_char_and_substring.c  05.string_tokenize.c  (+4 more)
(+36 files in other folders)
